style.css
/* ... */
.contact-me-button {
  width: 170px;
  border-style: none;
  display: flex;
  flex-direction: row;
  align-items: center;
  padding: 12px 16px;
  background: #fff;
  border-radius: 8px;
  font-style: normal;
  font-weight: 400;
  font-size: 20px;
  line-height: 24px;
  text-align: center;
  letter-spacing: 0.03em;
  color: #3f4fe6;
  margin-top: 15px;
  margin-bottom: 30px;
}

.contact-me-button:hover {
  opacity: 0.7;
}

.form-container {
  margin-top: 35px;
}

.add-padding-left {
  padding-left: 5px;
}

@media only screen and (min-width: 992px) {
  header {
    background-image: url("./utils/header-background-shape-desktop.svg");
    background-size: cover;
    justify-content: center;
    align-items: center;
  }

  nav {
    width: 99%;
  }

  .hamburger-menu {
    display: none;
  }

  .is-open {
    display: block;
  }

  .nav-menu {
    background: none;
    position: static;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    top: 0.0000001px;
    left: 0.0000001px;
    width: 20%;
    height: auto;
    opacity: 0.98;
    padding: 1px 40px;
  }

  .nav-menu-link {
    width: auto;
    font-style: normal;
    font-weight: 500;
    font-size: 15px;
    line-height: 20px;
    color: #344563;
    margin: 10px 20px;
    display: flex;
  }

  .close-menu {
    display: none;
  }

  .front-section {
    background-image: url("./utils/Header-bg.svg");
    margin-top: 1%;
  }

  .first-subsection {
    margin-top: 250px;
    margin-left: 200px;
    font-style: normal;
    font-weight: bold;
    font-size: 48px;
  }

  .second-subsection {
    font-style: normal;
    font-weight: normal;
    font-size: 20px;
    line-height: 28px;
    margin-left: 200px;
    width: 60%;
  }

  .link {
    margin-left: 180px;
  }

  .social-media {
    margin-left: 185px;
    margin-bottom: 230px;
  }

  #works {
    display: flex;
    flex-direction: column;
    width: 100%;
  }

  .cards {
    display: flex;
    flex-direction: row;
    padding: 16px;
    width: 80%;
    height: auto;
    background: #fff;
    border: 1px solid #dfe1e6;
    border-radius: 24px;
    margin: 40px 142px;
    align-items: center;
  }

  #snapshot1 {
    width: 544px;
    height: 448px;
    background: url("./utils/Snapshoot-Portfolio.svg");
    border-radius: 8px;
    background-size: cover;
    margin: 8px 8px;
  }

  .card-body-container {
    display: flex;
    flex-direction: column;
    width: 544px;
    margin: 20px 20px;
  }

  .card-heading {
    width: auto;
    height: auto;
    font-weight: bold;
    font-size: 40px;
    line-height: 52px;
  }

  .card-list {
    justify-content: right;
    margin-right: 30px;
  }

  .card-list li {
    margin-right: 10px;
    font-size: 18px;
    line-height: 24px;
    margin-top: 10px;
    margin-bottom: 10px;
  }

  .item {
    margin-top: 2px;
  }

  .client {
    font-style: normal;
    font-weight: 600;
    font-size: 13px;
    color: #344563;
  }

  .role {
    font-style: normal;
    font-weight: 600;
    font-size: 13px;
    color: #7a869a;
  }

  .year {
    font-style: normal;
    font-weight: 600;
    font-size: 13px;
    color: #7a869a;
  }

  .card-main {
    font-size: 16px;
    line-height: 24px;
  }

  .language-list {
    margin-top: 30px;
    margin-bottom: 10px;
  }

  .language-item {
    height: 24px;
  }

  .language-container {
    padding: 4px 12px;
    background: #ebebff;
    border-radius: 8px;
    margin-right: 10px;
  }

  .language-text {
    font-size: 12px;
    letter-spacing: 0.03em;
    color: #6070ff;
    margin: 0.0001px 0.0001px;
  }

  #snapshot2 {
    width: 544px;
    height: 448px;
    background: url("./utils/Snapshoot-Portfolio2.svg");
    border-radius: 8px;
    background-size: cover;
    margin: 8px 8px;
  }

  .reverse-row {
    display: flex;
    flex-direction: row-reverse;
    align-items: center;
  }

  #snapshot3 {
    width: 544px;
    height: 448px;
    background: url("./utils/Snapshoot-Portfolio3.svg");
    border-radius: 8px;
    background-size: cover;
    margin: 8px 8px;
  }

  #snapshot4 {
    width: 544px;
    height: 448px;
    background: url("./utils/Snapshoot-Portfolio4.svg");
    border-radius: 8px;
    background-size: cover;
    margin: 8px 8px;
  }

  #about-me {
    background-image: url("./utils/about-myself-background-shape-desktop.svg");
    margin-top: 60px;
  }

  .footer-first-two {
    display: flex;
    align-items: center;
  }

  .intro-about {
    width: 447px;
    margin-left: 135px;
  }

  #dropdown-menu {
    width: 684px;
  }

  #second-social-media {
    margin: 2px;
    margin-top: 10px;
  }

  .language-lists {
    display: flex;
    margin-top: 40px;
    margin-bottom: 30px;
  }

  .language-list-container {
    left: 12px;
    top: 12px;
    background: #f7f7f9;
    border-radius: 8px;
    margin: 6px 12px;
    width: 122px;
    height: 120px;
    display: flex;
    flex-direction: column;
  }

  .language-item-logo {
    width: 48px;
    height: 48px;
    left: calc(50% - 48px / 2 - 25px);
    top: 12px;
  }

  #contact-padding {
    padding-right: 10px;
  }

  .language-item-text {
    font-style: normal;
    font-weight: 500;
    font-size: 15px;
    line-height: 20px;
  }

  .footer-container {
    background-image: url("./utils/contact-form-background-shape-desktop.svg");
    background-repeat: no-repeat;
    background-size: cover;
    padding-top: 50px;
    width: 100%;
    background-color: #fff;
  }

  .layer {
    background-image: url("./utils/22.png");
    background-repeat: no-repeat;
    background-position: 0.0001px 0.00001px;
    width: 100%;
  }

  .contact-me-first {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin-top: 30px;
  }

  .contact-me-text {
    width: 546px;
  }
}

